@@ -37,4 +37,35 @@ class Peak_Controller_Helper_Request
         }
     }
 
+    /**
+     * Get parsed $_SERVER['HTTP_ACCEPT_LANGUAGE']
+     * 
+     * @param  boolean $first_only return the first language only
+     * @return array
+     */
+    public function getLanguages($first_only = false)
+    {
+        $result = array();
+
+        if(array_key_exists('HTTP_ACCEPT_LANGUAGE', $_SERVER)) {
+
+            $pattern = '/^(?P<tag>[a-zA-Z]{2,8})'.'(?:-(?P<subtag>[a-zA-Z]{2,8}))?(?:(?:;q=)'.'(?P<quantifier>\d\.\d))?$/';
+
+            foreach(explode(',', $_SERVER['HTTP_ACCEPT_LANGUAGE']) as $lang) {
+
+                if(preg_match($pattern, $lang, $splits)) {
+                    foreach($splits as $k => $v) {
+                        if(strlen($k) < 2) unset($splits[$k]);
+                    }
+                    $result[] = $splits;
+                }
+
+                if($first_only) break;                
+            }
+        }
+
+        return ($first_only && is_array($result)) ? $result[0] : $result;
+    }
+
+
 }
